--- a/userstyle.css
+++ b/userstyle.css
@@ -6,11 +6,11 @@
 @author       thaenalpha
 @license      No License
 ==/UserStyle== */
-@-moz-document url-prefix("https://yewtu.be/watch?v="),
-url-prefix("https://y.com.sb/watch?v="),
-url-prefix("https://vid.puffyan.us/watch?v="),
-url-prefix("https://youtube.076.ne.jp/watch?v="),
-url-prefix("https://yt.artemislena.eu/watch?v="),
+@-moz-document url-prefix(https://yewtu.be/watch?v=),
+url-prefix(https://y.com.sb/watch?v=),
+url-prefix(https://vid.puffyan.us/watch?v=),
+url-prefix(https://youtube.076.ne.jp/watch?v=),
+url-prefix(https://yt.artemislena.eu/watch?v=),
 regexp("https?://(?:\\binv\\b|invidious)\\..+?/watch\\?v=.*") {
     #contents {
         width: 100%
